--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div id="body">
+        <div id="calculator">
+            <div id="display">I am a display</div>
+            <div id="button-housing">
+                <button id = "1">1</button>
+                <button id="2">2</button>
+                <button id="3">3</button>
+                <button id="4">4</button>
+                <button id="5">5</button>
+                <button id="6">6</button>
+                <button id="7">7</button>
+                <button id="8">8</button>
+                <button id="9">9</button>
+                <button id="0">0</button>
+                <button id="plus">+</button>
+                <button id="subtract">-</button>
+                <button id="multiply">*</button>
+                <button id="divide">/</button>
+                <button id="equals">=</button>
+                <button id="clear">Clear</button>
+            </div>
+        </div>
+    </div>
 	<script src="index.js"></script>
   </body>
 </html>
