--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
   <body>
     <div id="body">
         <div id="calculator">
-            <div id="display">I am a display</div>
+            <div id="display"></div>
             <div id="button-housing">
-                <button id = "1">1</button>
-                <button id="2">2</button>
-                <button id="3">3</button>
-                <button id="4">4</button>
-                <button id="5">5</button>
-                <button id="6">6</button>
-                <button id="7">7</button>
-                <button id="8">8</button>
-                <button id="9">9</button>
-                <button id="0">0</button>
-                <button id="plus">+</button>
-                <button id="subtract">-</button>
-                <button id="multiply">*</button>
-                <button id="divide">/</button>
-                <button id="equals">=</button>
-                <button id="clear">Clear</button>
+              <button class = "arithButton" value="1">1</button>
+              <button class = "arithButton" value="2">2</button>
+              <button class = "arithButton" value="3">3</button>
+              <button class = "arithButton" value="4">4</button>
+              <button class = "arithButton" value="5">5</button>
+              <button class = "arithButton" value="6">6</button>
+              <button class = "arithButton" value="7">7</button>
+              <button class = "arithButton" value="8">8</button>
+              <button class = "arithButton" value="9">9</button>
+              <button class = "arithButton" value="0">0</button>
+              <button class = "oppButton" value="+">+</button>
+              <button class = "oppButton" value="-">-</button>
+              <button class = "oppButton" value="*">*</button>
+              <button class = "oppButton" value="/">/</button>
+              <button class = "equalButton" value="=">=</button>
+              <button class = "clearButton" value="clear">Clear</button>
             </div>
         </div>
     </div>
-	<script src="index.js"></script>
+	<script src="script.js"></script>
   </body>
 </html>
