Add arithmetic operator and clear button functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <div id="body">
         <div id="calculator">
+            <div id="displayFirstNum"></div>
+            <div id="debug">Spacer</div>
             <div id="display"></div>
             <div id="button-housing">
               <button class = "arithButton" value="1">1</button>
