Change clear >> AC (All clear)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <button class = "oppButton" value="*">*</button>
               <button class = "oppButton" value="/">/</button>
               <button class = "equalButton" value="=">=</button>
-              <button class = "clearButton" value="clear">Clear</button>
+              <button class = "allClearButton" value="AC">AC</button>
             </div>
         </div>
     </div>
