Add clear button to clear current input

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               <button class = "oppButton" value="/">/</button>
               <button class = "equalButton" value="=">=</button>
               <button class = "allClearButton" value="AC">AC</button>
+              <button class = "clearButton" value="C">C</button>
             </div>
         </div>
     </div>
