--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <button class = "oppButton" value="-">-</button>
               <button class = "oppButton" value="*">*</button>
               <button class = "oppButton" value="/">/</button>
+              <button class = "changeSignButton">+/-</button>
               <button class = "equalButton" value="=">=</button>
               <button class = "allClearButton" value="AC">AC</button>
               <button class = "clearButton" value="C">C</button>
