--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               <button class = "allClearButton" value="AC">AC</button>
               <button class = "clearButton" value="C">C</button>
             </div>
+            <div id="history">Hello</div>
         </div>
     </div>
 	<script src="script.js"></script>
