Change displayFirstNum >>> displayCache and firstNum >>> cache

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="body">
         <div id="calculator">
-            <div id="displayFirstNum"></div>
+            <div id="displayCache"></div>
             <div id="debug">Spacer</div>
             <div id="display"></div>
             <div id="button-housing">
@@ -33,7 +33,6 @@
               <button class = "allClearButton" value="AC">AC</button>
               <button class = "clearButton" value="C">C</button>
             </div>
-            <div id="history">Hello</div>
         </div>
     </div>
 	<script src="script.js"></script>
