Add decimal point functionality

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <button class = "oppButton" value="*">*</button>
               <button class = "oppButton" value="/">/</button>
               <button class = "changeSignButton">+/-</button>
+              <button class = "decimalButton">.</button>
               <button class = "equalButton" value="=">=</button>
               <button class = "allClearButton" value="AC">AC</button>
               <button class = "clearButton" value="C">C</button>
