--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               <button class = "equalButton" value="=">=</button>
               <button class = "allClearButton" value="AC">AC</button>
               <button class = "clearButton" value="C">C</button>
+              <button class = "deleteButton">DEL</button>
             </div>
         </div>
     </div>
